Fix errors in Business Example

--- a/sample/Evernote Business/templates/index.html
+++ b/sample/Evernote Business/templates/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Evernote Python Example | Templates</title>
+      <title>Evernote Python Example | Evernote Business</title>
       <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more."/>
       <link rel="stylesheet" href="static/foundation.css"/>
       <script src="static/modernizr.js"></script>
