--- a/sample/Evernote Business/templates/splash.html
+++ b/sample/Evernote Business/templates/splash.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Evernote Python Example | Templates</title>
+      <title>Evernote Python Example | Evernote Business</title>
       <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more."/>
       <link rel="stylesheet" href="static/foundation.css"/>
       <script src="static/modernizr.js"></script>
@@ -15,7 +15,7 @@
         <ul class="title-area">
           <li class="name">
             <h1>
-              <a href='/'> Evernote Python Example | Templates</a>
+              <a href='/'> Evernote Python Example | Evernote Business</a>
             </h1>
           </li>
           <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
@@ -43,11 +43,11 @@
          <div class="large-12 columns text-center">
           <!-- content -->
           <h1>
-            Evernote Python Example | Templates
+            Evernote Python Example | Evernote Business
           </h1>
           <br>
           <p>
-            This application takes all notes in your account with the tag "template" or "Template" and displays the title and tag of the note here.  When you click on a template the application creates a new Evernote note and opens it in your local Evernote client for you to work on.
+            This application presents all recently edited or created business notes and provdies links to view/edit said notes in your Evernote client!
           </p>
                     <br>
           <a href="{{ auth_url }}" class="medium success button">Connet to Evernote!</a>
