--- a/sample/templates/templates/saved.html
+++ b/sample/templates/templates/saved.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Evernote Python Example | Giphy</title>
+      <title>Evernote Python Example | Templates</title>
       <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more."/>
       <link rel="stylesheet" href="static/foundation.css"/>
       <script src="static/modernizr.js"></script>
@@ -15,7 +15,7 @@
         <ul class="title-area">
           <li class="name">
             <h1>
-              <a href='/'> Evernote Python Example | Giphy</a>
+              <a href='/'> Evernote Python Example | Templates</a>
             </h1>
           </li>
           <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
@@ -61,7 +61,7 @@
        
         <div class="large-3 columns">
           <br><p>
-            This application serves a random animated GIF from <a href="http://giphy.com/"> Giphy.com</a> and gives you the option to save that GIF to Evernote!  This application works with app notebook, basic and full access API keys.  To learn more about the Evernote API goto <a href="https://dev.evernote.com">https://dev.evernote.com</a>.  To see examples of excellent applications with Evernote integrations see the <a href="https://appcenter.evernote.com">Evernote app center!</a>
+            This application takes all notes in your account with the tag "template" or "Template" and displays the title and tag of the note here.  To learn more about the Evernote API goto <a href="https://dev.evernote.com">https://dev.evernote.com</a>.  To see examples of excellent applications with Evernote integrations see the <a href="https://appcenter.evernote.com">Evernote app center!</a>
           <hr>
           <p>
             <a href="https://appcenter.evernote.com/"><img src="static/appcenter.png"></a><br/>
