--- a/sample/templates/templates/reset.html
+++ b/sample/templates/templates/reset.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Evernote Python Example | Giphy</title>
+      <title>Evernote Python Example | Templates</title>
       <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more."/>
       <link rel="stylesheet" href="static/foundation.css"/>
       <script src="static/modernizr.js"></script>
@@ -15,7 +15,7 @@
         <ul class="title-area">
           <li class="name">
             <h1>
-              <a href='/'> Evernote Python Example | Giphy</a>
+              <a href='/'> Evernote Python Example | Templates</a>
             </h1>
           </li>
           <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
